# IDOR-otaku

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  dev.py  idotaku.example.yaml  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
docs/: COMPARISON.md  QUICKSTART.md  README_ja.md  SPECIFICATION.md
examples/vulnerable_api/: README.md  idotaku.yaml  run_demo.py  run_demo.sh  server.py  test_report_inproc.json  test_report_inproc2.json  test_scenario.py
src/idotaku/: __init__.py  banner.py  browser.py  cli.py  config.py  import_har.py  interactive.py  tracker.py
src/idotaku/commands/: __init__.py  auth_cmd.py  chain.py  config_cmd.py  csv_cmd.py  diff_cmd.py  export.py  flow.py  graph.py  har_cmd.py  interactive_cmd.py  lifeline.py  report.py  run.py  sarif_cmd.py  score_cmd.py  sequence.py  trace.py  tree.py  verify_cmd.py  version.py
src/idotaku/export/: __init__.py  chain_exporter.py  csv_exporter.py  html_base.py  html_scripts.py  html_styles.py  sarif_exporter.py  sequence_exporter.py  sequence_scripts.py  sequence_styles.py
src/idotaku/report/: __init__.py  analysis.py  auth_analysis.py  diff.py  loader.py  models.py  scoring.py
src/idotaku/utils/: __init__.py  formatting.py  url.py
src/idotaku/verify/: __init__.py  comparison.py  http_client.py  models.py  suggestions.py
src/idotaku/visualization/: __init__.py  console.py
tests/: __init__.py  conftest.py  test_analysis_coverage.py  test_auth_analysis.py  test_banner.py  test_browser.py  test_chain_cmd.py  test_chain_coverage.py  test_chain_helpers.py  test_cli.py  test_config.py  test_config_cmd.py  test_coverage_misc.py  test_csv_export.py  test_diff.py  test_e2e_pipeline.py  test_export.py  test_export_error_handling.py  test_har_import.py  test_interactive.py  test_report.py  test_run_cmd.py  test_run_demo.py  test_sarif_export.py  test_scoring.py  test_sequence_export.py  test_tracker.py  test_utils.py  test_verify.py  test_visualization.py
