[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idotaku"
version = "0.1.0"
description = "API ID tracking tool for security testing - tracks ID generation and usage patterns"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["security", "api", "testing", "mitmproxy", "idor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "mitmproxy>=10.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
idotaku = "idotaku.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/idotaku"
Repository = "https://github.com/yourname/idotaku"

[tool.hatch.build.targets.wheel]
packages = ["src/idotaku"]

[tool.ruff]
line-length = 100
target-version = "py310"
