[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idotaku"
version = "0.1.0"
description = "mitmproxy-based IDOR detection tool - intercepts traffic and analyzes parameter relationships to find insecure direct object references"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "RalianENG", email = "ralianengineering@gmail.com"},
]
keywords = [
    "idor",
    "security",
    "mitmproxy",
    "proxy",
    "pentest",
    "bug-bounty",
    "api-security",
    "parameter-analysis",
    "web-security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mitmproxy>=10.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
idotaku = "idotaku.cli:main"

[project.urls]
Homepage = "https://github.com/RalianENG/IDOR-otaku"
Repository = "https://github.com/RalianENG/IDOR-otaku"
Issues = "https://github.com/RalianENG/IDOR-otaku/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/idotaku"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
