[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idotaku"
version = "0.3.0"
description = "mitmproxy-based IDOR detection tool - intercepts traffic and analyzes parameter relationships to find insecure direct object references"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "RalianENG", email = "ralianengineering@gmail.com"},
]
keywords = [
    "idor",
    "security",
    "mitmproxy",
    "proxy",
    "pentest",
    "bug-bounty",
    "api-security",
    "parameter-analysis",
    "web-security",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mitmproxy>=11.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
idotaku = "idotaku.cli:main"

[project.urls]
Homepage = "https://github.com/RalianENG/IDOR-otaku"
Repository = "https://github.com/RalianENG/IDOR-otaku"
Issues = "https://github.com/RalianENG/IDOR-otaku/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/idotaku"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
strict_optional = true
ignore_missing_imports = true
show_error_codes = true
exclude = ["venv", ".venv"]

# Strict mode for core modules (gradually enable for others)
[[tool.mypy.overrides]]
module = [
    "idotaku.report.models",
    "idotaku.report.loader",
    "idotaku.report.scoring",
    "idotaku.report.diff",
    "idotaku.report.analysis",
    "idotaku.config",
    "idotaku.export.csv_exporter",
    "idotaku.export.sarif_exporter",
    "idotaku.export.html_base",
    "idotaku.export.chain_exporter",
    "idotaku.export.sequence_exporter",
    "idotaku.import_har",
    "idotaku.interactive",
    "idotaku.tracker",
    "idotaku.utils.url",
    "idotaku.utils.formatting",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_return_any = true
check_untyped_defs = true

# Modules with known issues - TODO: fix and enable strict checking
[[tool.mypy.overrides]]
module = [
    "idotaku.commands.*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
